# libeddsa

./: CMakeLists.txt
lib/: CMakeLists.txt  burn.cpp  burn.hpp  burnstack.cpp  burnstack.hpp  compat.hpp  ed.cpp  ed.hpp  ed25519-sha512.cpp  eddsa.h  eddsa.hpp  fld.cpp  fld.hpp  limb.hpp  sc.cpp  sc.hpp  sha512.cpp  sha512.hpp  x25519.c  x25519.cpp
test/: CMakeLists.txt  selftest-convert.c  selftest-convert.cpp  selftest-ed25519.cpp  selftest-sha512.cpp  selftest-x25519.c  selftest-x25519.cpp  selftest-x25519_base.cpp
